test/asm/incbin-start-bad.asm
SECTION "Bad", ROM0

INCBIN "data.bin", 999
INCBIN "data.bin", 999, 1
